@@ -1,3 +1,10 @@
+2004-10-12  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-smb.el (tramp-smb-advice-PC-do-completion): Don't activate
+	advice during definition.  This is done later on, depending on
+	test result of `substitute-in-file-name'.  Suggested by Stefan
+	Monnier <monnier@iro.umontreal.ca>.
+
 2004-10-10  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (top): Apply `def-edebug-spec' only if function is
